# gemini-fitcheck

./: README.md
sample/fitnessAI/: .env  pyproject.toml
sample/fitnessAI/api/: config.py  instructions.py  llmGeminiTest.py  main.py  script.py  test.py
sample/fitnessAI/api/deprecated/: llmGeminiTest.py  tempCodeRunnerFile.py  test.py  videoFraming.ipynb  videoFraming.py  videoFramingModified.py
sample/fitnessAI/api/deprecated/src/: imageDetection.py  launch.ipynb  launch_old.ipynb
sample/fitnessAI/api/helper/: geminiAccess.py  nlp.py  videoDrawer.py  videoDrawerModified.py  videoDrawer_old.py  videoFraming.js  videoFraming.py
sample/fitnessAI/api/routes/: fileTouching.py
sample/fitnessAI/api/s3/: s3.py
sample/fitnessAI/content/pose/estimation/: index.html  main.js  package-lock.json  package.json
sample/fitnessAI/src/: imageDetection.ipynb
sample/fitnessAI/ui/: package-lock.json
sample/fitnessAI/ui/src/: App.css  App.js  DragDrop.js
sample/fitnessAI/ui/src/helpers/: videoSender.js
