[tool.poetry]
name = "Fitness-Analyzer"
version = "0.1.0"
description = "Testing ground for an app to analyze your fitness activity."
authors = ["Adam Huang"]

[tool.poetry.dependencies]
# python = ">=3.10.0,<3.12"
python = ">=3.11.0, <3.12"
unstructured = '==0.10.25'
pyowm = '3.3.0'
python-dotenv = "1.0.0"
langchain-openai = "^0.0.5"
langchain = "^0.1.14"
python-decouple = "^3.8"
setuptools = "^69.2.0"
google-generativeai = "^0.5.0"
ipykernel = "^6.29.4"
pillow = "^10.3.0"
moviepy = "^1.0.3"
opencv-python = "^4.9.0.80"
mediapipe = "^0.10.11"
fastapi = "^0.110.3"
boto3 = "^1.34.96"
uvicorn = "^0.29.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# Python code for type errors
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"